added a new feature to delete jobs by passing multi ids, made some tests refactoring