@@ -19,7 +19,6 @@
 
 package com.epam.grid.engine.provider.job.slurm;
 
-import com.epam.grid.engine.cmd.CmdExecutor;
 import com.epam.grid.engine.cmd.CommandArgUtils;
 import com.epam.grid.engine.cmd.GridEngineCommandCompiler;
 import com.epam.grid.engine.cmd.SimpleCmdExecutor;
@@ -50,15 +49,12 @@ import org.springframework.util.StringUtils;
 import org.thymeleaf.context.Context;
 import org.apache.commons.collections4.CollectionUtils;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-
-import static com.epam.grid.engine.utils.TextConstants.COLON;
-import static com.epam.grid.engine.utils.TextConstants.EMPTY_STRING;
 
 /**
  * This class performs various actions with jobs for the SLURM engine.
@@ -83,6 +79,7 @@ public class SlurmJobProvider implements JobProvider {
     private static final String SQUEUE_JOB_ID_ERROR_PATTERN = ".*Invalid job id specified.*";
     private static final int JOB_ID_START_POSITION = START_TERMINATING_JOB_PREFIX.length() + 1;
     private static final int ERROR_JOB_ID_POSITION = KILL_JOB_ERROR_PREFIX.length() + 1;
+    private static final String JOBS_DELETING_EXECUTION_RESULT = "Jobs deleting result: ";
     private static final Pattern SUBMITTED_JOB_PATTERN = Pattern.compile("Submitted batch job (\\d+).*");
 
     /**
@@ -126,7 +123,7 @@ public class SlurmJobProvider implements JobProvider {
     public Listing<Job> filterJobs(final JobFilter jobFilter) {
         SacctCommandParser.filterCorrectJobIds(jobFilter);
         final CommandResult result = simpleCmdExecutor.execute(makeSqueueCommand(jobFilter));
-        if (result.getExitCode() != 0 && !jobNotFoundByIdError(result)) {
+        if (result.getExitCode() != 0 && jobNotFoundByIdError(result)) {
             CommandsUtils.throwExecutionDetails(result);
         } else if (!result.getStdErr().isEmpty()) {
             log.warn(CommandsUtils.mergeOutputLines(result.getStdErr()));
@@ -137,32 +134,30 @@ public class SlurmJobProvider implements JobProvider {
     @Override
     public Job runJob(final JobOptions options) {
         validateJobOptions(options);
-        return buildNewJob(getResultOfExecutedCommand(simpleCmdExecutor, makeSbatchCommand(options)));
+        final CommandResult result = simpleCmdExecutor.execute(makeSbatchCommand(options));
+        if (result.getExitCode() != 0) {
+            CommandsUtils.throwExecutionDetails(result, HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+        final Matcher matcher = SUBMITTED_JOB_PATTERN.matcher(result.getStdOut().get(0));
+        if (!matcher.find()) {
+            CommandsUtils.throwExecutionDetails(result, HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+        return buildNewJob(Long.parseLong(matcher.group(1).trim()));
     }
 
     /**
      * Deletes the job being performed according to the specified parameters.
      *
      * @param deleteJobFilter Search parameters for the job being deleted.
-     * @return Information about the deleted job.
+     * @return Information about deleted jobs.
      */
     @Override
-    public DeletedJobInfo deleteJob(final DeleteJobFilter deleteJobFilter) {
-        if (!StringUtils.hasText(deleteJobFilter.getUser()) && deleteJobFilter.getId() == null) {
-            throw new GridEngineException(HttpStatus.BAD_REQUEST,
-                    String.format("Incorrect filling in %s. Either `id` or `user` should be specified for job removal!",
-                            deleteJobFilter));
-        }
-        if (deleteJobFilter.getId() != null && deleteJobFilter.getId() <= 0) {
-            throw new GridEngineException(HttpStatus.BAD_REQUEST,
-                    String.format("Id specified in %s for job removal is invalid!", deleteJobFilter));
-        }
-
-        final String jobOwner;
-        if (StringUtils.hasText(deleteJobFilter.getUser())) {
-            jobOwner = deleteJobFilter.getUser();
-        } else {
-            jobOwner = getJobById(deleteJobFilter.getId()).getOwner();
+    public Listing<DeletedJobInfo> deleteJob(final DeleteJobFilter deleteJobFilter) {
+        validateDeleteRequest(deleteJobFilter);
+        final Map<Long, String> jobOwners = getJobOwners(deleteJobFilter);
+        if (jobOwners.isEmpty()) {
+            throw new GridEngineException(HttpStatus.NOT_FOUND,
+                    String.format("No jobs found from the specified %s to remove!", deleteJobFilter));
         }
 
         final CommandResult result = simpleCmdExecutor.execute(makeScancelCommand(deleteJobFilter));
@@ -172,7 +167,7 @@ public class SlurmJobProvider implements JobProvider {
 
         final Set<String> errorDeletingJobs = result.getStdErr().stream()
                 .filter((s) -> s.startsWith(KILL_JOB_ERROR_PREFIX))
-                .map((s) -> s.substring(ERROR_JOB_ID_POSITION, s.indexOf(COLON, ERROR_JOB_ID_POSITION)))
+                .map((s) -> s.substring(ERROR_JOB_ID_POSITION, s.indexOf(TextConstants.COLON, ERROR_JOB_ID_POSITION)))
                 .collect(Collectors.toSet());
 
         final List<Long> deletedJobIds = result.getStdErr().stream()
@@ -185,7 +180,34 @@ public class SlurmJobProvider implements JobProvider {
         if (deletedJobIds.isEmpty()) {
             CommandsUtils.throwExecutionDetails(result, HttpStatus.NOT_FOUND);
         }
-        return new DeletedJobInfo(deletedJobIds, jobOwner);
+        if (deletedJobIds.size() < jobOwners.size()) {
+            log.warn(JOBS_DELETING_EXECUTION_RESULT + result);
+        }
+        return new Listing<>(deletedJobIds.stream()
+                .map(id -> new DeletedJobInfo(id, jobOwners.get(id)))
+                .collect(Collectors.toList()));
+    }
+
+    /**
+     * This method checks the correctness of the user-defined conditions for searching for deleted jobs.
+     *
+     * @param deleteJobFilter User-defined conditions.
+     */
+    private void validateDeleteRequest(final DeleteJobFilter deleteJobFilter) {
+        if (!StringUtils.hasText(deleteJobFilter.getUser()) && CollectionUtils.isEmpty(deleteJobFilter.getIds())) {
+            throw new GridEngineException(HttpStatus.BAD_REQUEST,
+                    String.format("Incorrect filling in %s. Either at least one `id` or `user` must be specified"
+                            + " to delete jobs!", deleteJobFilter));
+        }
+        ListUtils.emptyIfNull(deleteJobFilter.getIds()).stream()
+                .map(id -> id != null ? id : -1L)
+                .filter(id -> id <= 0)
+                .findFirst()
+                .ifPresent(id -> {
+                    throw new GridEngineException(HttpStatus.BAD_REQUEST,
+                            String.format("At least one `id` is incorrect specified in %s for job removal!",
+                                    deleteJobFilter));
+                });
     }
 
     /**
@@ -224,30 +246,9 @@ public class SlurmJobProvider implements JobProvider {
         }
     }
 
-    private String getResultOfExecutedCommand(final CmdExecutor cmdExecutor, final String[] command) {
-        final CommandResult result = cmdExecutor.execute(command);
-        if (result.getExitCode() != 0) {
-            CommandsUtils.throwExecutionDetails(result, HttpStatus.INTERNAL_SERVER_ERROR);
-        }
-        return parseJobId(result.getStdOut().get(0));
-    }
-
-    /**
-     * Gets the job ID from the string.
-     *
-     * @param jobString A string that can contain the job ID.
-     * @return JobID or an empty string.
-     */
-    private String parseJobId(final String jobString) {
-        final Matcher matcher = SUBMITTED_JOB_PATTERN.matcher(jobString);
-        return matcher.find()
-                ? matcher.group(1)
-                : EMPTY_STRING;
-    }
-
-    private Job buildNewJob(final String id) {
+    private Job buildNewJob(final long id) {
         return Job.builder()
-                .id(Integer.parseInt(id))
+                .id(id)
                 .state(JobState.builder()
                         .category(JobState.Category.PENDING)
                         .build())
@@ -281,7 +282,7 @@ public class SlurmJobProvider implements JobProvider {
 
     private boolean jobNotFoundByIdError(final CommandResult result) {
         return ListUtils.emptyIfNull(result.getStdErr()).stream()
-                .anyMatch(s -> !s.matches(SQUEUE_JOB_ID_ERROR_PATTERN));
+                .anyMatch(s -> s.matches(SQUEUE_JOB_ID_ERROR_PATTERN));
     }
 
     /**
@@ -296,14 +297,13 @@ public class SlurmJobProvider implements JobProvider {
         return commandCompiler.compileCommand(getProviderType(), SCANCEL_COMMAND, context);
     }
 
-    private Job getJobById(final Long id) {
-        final JobFilter jobFilter = JobFilter.builder()
-                .ids(Collections.singletonList(id))
-                .build();
-
+    private Map<Long, String> getJobOwners(final DeleteJobFilter deleteJobFilter) {
+        final JobFilter jobFilter = new JobFilter();
+        jobFilter.setIds(ListUtils.emptyIfNull(deleteJobFilter.getIds()));
+        if (StringUtils.hasText(deleteJobFilter.getUser())) {
+            jobFilter.setOwners(List.of(deleteJobFilter.getUser()));
+        }
         return ListUtils.emptyIfNull(filterJobs(jobFilter).getElements()).stream()
-                .findFirst()
-                .orElseThrow(() -> new GridEngineException(HttpStatus.NOT_FOUND,
-                        String.format("Id specified in %d for job removal not found!", id)));
+                .collect(Collectors.toMap(Job::getId, Job::getOwner));
     }
 }
